--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config ./jest.config.js --forceExit --coverage --runInBand"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,8 @@
     "pg": "^7.14.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.1"
+    "babel-jest": "^24.9.0",
+    "nodemon": "^2.0.1",
+    "supertest": "^4.0.2"
   }
 }
